flex/flex-tests/testData/js2_highlighting/CreateImplementsFix1.js2
package {

public class CreateImplementsFix1 {
  public function foo() {
    C.ccc(<error descr="Argument type CreateImplementsFix1 is not assignable to parameter type MyInt">this</error>);
  }
}
}


<error descr="Package should be first statement in file">package</error> <error descr="Package name 'com.foo' does not correspond to file path ''">com.foo</error> {

public interface <error descr="Class 'MyInt' should be defined in file 'MyInt.js2'">MyInt</error> {
}

}

<error descr="Package should be first statement in file">package</error> {
  import com.foo.MyInt;

  public class <error descr="Class 'C' should be defined in file 'C.js2'">C</error> {
    internal static function ccc(i: MyInt) {}
  }

}